--- a/projects/templates/email/email_template.html
+++ b/projects/templates/email/email_template.html
@@ -75,7 +75,7 @@
 
             {% if property %}
                 <!-- Removed property details section -->
-                <a href="https://yetipm-frontend-xi.vercel.app/rentals/{{ slug }}" class="button">View Property Details</a>
+                <a href="https://yetipm-frontend-xi.vercel.app/rentals/{{ property.slug }}" class="button">View Property Details</a>
 
             {% endif %}
 
