--- a/projects/templates/email/email_template.html
+++ b/projects/templates/email/email_template.html
@@ -44,7 +44,7 @@
             display: inline-block;
             padding: 12px 25px;
             margin: 25px 0;
-            background-color: #007b5f;
+            background-color: #005f3d;
             color: #ffffff;
             text-decoration: none;
             border-radius: 5px;
