--- a/projects/templates/email/general_inquiry_template.html
+++ b/projects/templates/email/general_inquiry_template.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Inquiry Notification</title>
+    <title>General Inquiry Response</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -40,43 +40,25 @@
             font-size: 12px;
             color: #6c757d;
         }
-        .button {
-            display: inline-block;
-            padding: 10px 20px;
-            margin: 20px 0;
-            background-color: #00796b;
-            color: #ffffff;
-            text-decoration: none;
-            border-radius: 4px;
-            border: none;
-            transition: background-color 0.3s, transform 0.3s;
-        }
-
-        .button:hover {
-            background-color: #005f56;
-            transform: scale(1.02);
-        }
     </style>
 </head>
 <body>
     <div class="container">
         <div class="header">
             <img src="https://yetipm.baliyoventures.com/media/YetiPM.jpg" alt="Yeti Property Management Logo">
-            <h1>New Inquiry Received</h1>
+            <h1>General Inquiry Response</h1>
         </div>
         <div class="content">
-            <p>Dear Admin,</p>
-            <p>You have received a new inquiry. Here are the details:</p>
-            <p><strong>First Name:</strong> {{first_name}}</p>
-            <p><strong>Last Name:</strong> {{last_name}}</p>
-            <p><strong>Email:</strong> {{email}}</p>
-            <p><strong>Phone Number:</strong> {{phone_number}}</p>
-            <p><strong>Message:</strong> {{message}}</p>
-
-            {% if property %}
-                <a href="https://yetipm-frontend-xi.vercel.app/rentals/{{ property }}" class="button">View Property Details</a>
-            {% endif %}
-
+            <p>Dear {{ first_name }} {{ last_name }},</p>
+            <p>Thank you for reaching out to us with your inquiry. We appreciate your interest and are here to assist you.</p>
+            <p>Our team will review your message and get back to you as soon as possible. If you have any urgent questions, please feel free to contact us directly.</p>
+            <p>Looking forward to assisting you!</p>
+            <p>Best regards,<br>
+            Shraddha Shrestha<br>
+            Sales & Marketing Head<br>
+            Yeti Property Management<br>
+            469-345-6419<br>
+            <a href="mailto:info@yetipm.com">info@yetipm.com</a></p>
         </div>
         <div class="footer">
             <p>Thank you,</p>
